--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p class="subtitle">A Machine Learning Approach Using CIC-IoT Dataset</p>
             <p class="description">Enhancing security for Small and Medium Enterprises through advanced threat detection</p>
             <div class="cta-buttons">
-                <a href="./pdf_viewer.html?pdf=../output/introduction_iot_security_study.pdf&title=Introduction" class="cta-button">View Full Report</a>
+                <a href="./pdf_viewer.html?pdf=https://ik.imagekit.io/kr7ylbnd3/introduction_iot_security_study.pdf?updatedAt=1745271043350&title=Introduction" class="cta-button">View Full Report</a>
                 <a href="https://www.unb.ca/cic/datasets/iotdataset-2023.html" class="cta-button secondary" target="_blank">Dataset Link</a>
             </div>
         </div>
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="dashboard-header">
                 <h2 class="dashboard-title">Case Study Dashboard</h2>
-                <a href="../output/introduction_iot_security_study.pdf" target="_blank" class="btn">
+                <a href="https://ik.imagekit.io/kr7ylbnd3/introduction_iot_security_study.pdf?updatedAt=1745271043350" target="_blank" class="btn">
                     <i class="fas fa-file-pdf"></i> Full Report
                 </a>
             </div>
@@ -93,7 +93,7 @@
                 <div class="pdf-header">
                     <h3 class="pdf-title" id="pdf-title">Introduction</h3>
                     <div class="pdf-buttons">
-                        <a href="../output/introduction_iot_security_study.pdf" class="btn" id="pdf-download" download>
+                        <a href="https://ik.imagekit.io/kr7ylbnd3/introduction_iot_security_study.pdf?updatedAt=1745271043350" class="btn" id="pdf-download" download>
                             <i class="fas fa-download"></i> Download
                         </a>
                     </div>
@@ -118,12 +118,12 @@
                         <p>Introduction to the case study and final conclusions from the research.</p>
                         <ul class="step-list">
                             <li>
-                                <a href="../output/introduction_iot_security_study.pdf" class="pdf-link" data-pdf="../output/introduction_iot_security_study.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/introduction_iot_security_study.pdf?updatedAt=1745271043350" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/introduction_iot_security_study.pdf?updatedAt=1745271043350">
                                     <i class="fas fa-file-pdf"></i> Introduction
                                 </a>
                             </li>
                             <li>
-                                <a href="../output/conclusion_iot_security_threat_detection.pdf" class="pdf-link" data-pdf="../output/conclusion_iot_security_threat_detection.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/conclusion_iot_security_threat_detection.pdf?updatedAt=1745271043279" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/conclusion_iot_security_threat_detection.pdf?updatedAt=1745271043279">
                                     <i class="fas fa-file-pdf"></i> Conclusion
                                 </a>
                             </li>
@@ -146,22 +146,22 @@
                         <p>Initial dataset exploration, context definition for SMEs, and identification of critical metrics.</p>
                         <ul class="step-list">
                             <li>
-                                <a href="../output/stage1_step1_dataset_familiarization.pdf" class="pdf-link" data-pdf="../output/stage1_step1_dataset_familiarization.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage1_step1_dataset_familiarization.pdf?updatedAt=1745271043272" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage1_step1_dataset_familiarization.pdf?updatedAt=1745271043272">
                                     <i class="fas fa-file-pdf"></i> Dataset Familiarization
                                 </a>
                             </li>
                             <li>
-                                <a href="../output/stage1_step1_attack_patterns_analysis.pdf" class="pdf-link" data-pdf="../output/stage1_step1_attack_patterns_analysis.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage1_step1_attack_patterns_analysis.pdf?updatedAt=1745271043338" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage1_step1_attack_patterns_analysis.pdf?updatedAt=1745271043338">
                                     <i class="fas fa-file-pdf"></i> Attack Patterns Analysis
                                 </a>
                             </li>
                             <li>
-                                <a href="../output/stage1_step2_sme_context_definition.pdf" class="pdf-link" data-pdf="../output/stage1_step2_sme_context_definition.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage1_step2_sme_context_definition.pdf?updatedAt=1745271042994" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage1_step2_sme_context_definition.pdf?updatedAt=1745271042994">
                                     <i class="fas fa-file-pdf"></i> SME Context Definition
                                 </a>
                             </li>
                             <li>
-                                <a href="../output/stage1_step3_critical_metrics.pdf" class="pdf-link" data-pdf="../output/stage1_step3_critical_metrics.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage1_step3_critical_metrics.pdf?updatedAt=1745271043364" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage1_step3_critical_metrics.pdf?updatedAt=1745271043364">
                                     <i class="fas fa-file-pdf"></i> Critical Metrics Identification
                                 </a>
                             </li>
@@ -184,12 +184,12 @@
                         <p>Data quality assessment and feature engineering to prepare for model development.</p>
                         <ul class="step-list">
                             <li>
-                                <a href="../output/stage2_step1_quality_assessment.pdf" class="pdf-link" data-pdf="../output/stage2_step1_quality_assessment.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage2_step1_quality_assessment.pdf?updatedAt=1745271043379" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage2_step1_quality_assessment.pdf?updatedAt=1745271043379">
                                     <i class="fas fa-file-pdf"></i> Quality Assessment
                                 </a>
                             </li>
                             <li>
-                                <a href="../output/stage2_step2_feature_engineering.pdf" class="pdf-link" data-pdf="../output/stage2_step2_feature_engineering.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage2_step2_feature_engineering.pdf?updatedAt=1745271043349" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage2_step2_feature_engineering.pdf?updatedAt=1745271043349">
                                     <i class="fas fa-file-pdf"></i> Feature Engineering
                                 </a>
                             </li>
@@ -212,17 +212,17 @@
                         <p>Exploratory analysis to identify patterns, correlations, and anomaly criteria.</p>
                         <ul class="step-list">
                             <li>
-                                <a href="../output/stage3_step1_pattern_analysis.pdf" class="pdf-link" data-pdf="../output/stage3_step1_pattern_analysis.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage3_step1_pattern_analysis.pdf?updatedAt=1745271043337" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage3_step1_pattern_analysis.pdf?updatedAt=1745271043337">
                                     <i class="fas fa-file-pdf"></i> Pattern Analysis
                                 </a>
                             </li>
                             <li>
-                                <a href="../output/stage3_step2_correlation_analysis.pdf" class="pdf-link" data-pdf="../output/stage3_step2_correlation_analysis.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage3_step2_correlation_analysis.pdf?updatedAt=1745271043368" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage3_step2_correlation_analysis.pdf?updatedAt=1745271043368">
                                     <i class="fas fa-file-pdf"></i> Correlation Analysis
                                 </a>
                             </li>
                             <li>
-                                <a href="../output/stage3_step3_anomaly_identification.pdf" class="pdf-link" data-pdf="../output/stage3_step3_anomaly_identification.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage3_step3_anomaly_identification.pdf?updatedAt=1745271043331" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage3_step3_anomaly_identification.pdf?updatedAt=1745271043331">
                                     <i class="fas fa-file-pdf"></i> Anomaly Identification
                                 </a>
                             </li>
@@ -245,12 +245,12 @@
                         <p>Development of machine learning models and optimization for SME environments.</p>
                         <ul class="step-list">
                             <li>
-                                <a href="../output/stage4_step1_base_model_development.pdf" class="pdf-link" data-pdf="../output/stage4_step1_base_model_development.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage4_step1_base_model_development.pdf?updatedAt=1745271043330" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage4_step1_base_model_development.pdf?updatedAt=1745271043330">
                                     <i class="fas fa-file-pdf"></i> Base Model Development
                                 </a>
                             </li>
                             <li>
-                                <a href="../output/stage4_step2_sme_optimized_learning.pdf" class="pdf-link" data-pdf="../output/stage4_step2_sme_optimized_learning.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage4_step2_sme_optimized_learning.pdf?updatedAt=1745271043370" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage4_step2_sme_optimized_learning.pdf?updatedAt=1745271043370">
                                     <i class="fas fa-file-pdf"></i> SME-Optimized Learning
                                 </a>
                             </li>
@@ -273,12 +273,12 @@
                         <p>Evaluation of model performance and validation by domain experts.</p>
                         <ul class="step-list">
                             <li>
-                                <a href="../output/stage5_step1_performance_metrics.pdf" class="pdf-link" data-pdf="../output/stage5_step1_performance_metrics.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage5_step1_performance_metrics.pdf?updatedAt=1745271043323" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage5_step1_performance_metrics.pdf?updatedAt=1745271043323">
                                     <i class="fas fa-file-pdf"></i> Performance Metrics
                                 </a>
                             </li>
                             <li>
-                                <a href="../output/stage5_step2_domain_expert_validation.pdf" class="pdf-link" data-pdf="../output/stage5_step2_domain_expert_validation.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage5_step2_domain_expert_validation.pdf?updatedAt=1745271043375" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage5_step2_domain_expert_validation.pdf?updatedAt=1745271043375">
                                     <i class="fas fa-file-pdf"></i> Domain Expert Validation
                                 </a>
                             </li>
@@ -301,7 +301,7 @@
                         <p>Comprehensive documentation of findings and visualization of results.</p>
                         <ul class="step-list">
                             <li>
-                                <a href="../output/stage6_reporting_and_visualization.pdf" class="pdf-link" data-pdf="../output/stage6_reporting_and_visualization.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage6_reporting_and_visualization.pdf?updatedAt=1745271043324" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage6_reporting_and_visualization.pdf?updatedAt=1745271043324">
                                     <i class="fas fa-file-pdf"></i> Results & Visualization
                                 </a>
                             </li>
@@ -324,12 +324,12 @@
                         <p>Practical implementation recommendations and future research directions.</p>
                         <ul class="step-list">
                             <li>
-                                <a href="../output/stage7_step1_implementation_framework.pdf" class="pdf-link" data-pdf="../output/stage7_step1_implementation_framework.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage7_step1_implementation_framework.pdf?updatedAt=1745271043357" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage7_step1_implementation_framework.pdf?updatedAt=1745271043357">
                                     <i class="fas fa-file-pdf"></i> Implementation Framework
                                 </a>
                             </li>
                             <li>
-                                <a href="../output/stage7_step2_future_enhancement_areas.pdf" class="pdf-link" data-pdf="../output/stage7_step2_future_enhancement_areas.pdf">
+                                <a href="https://ik.imagekit.io/kr7ylbnd3/stage7_step2_future_enhancement_areas.pdf?updatedAt=1745271043349" class="pdf-link" data-pdf="https://ik.imagekit.io/kr7ylbnd3/stage7_step2_future_enhancement_areas.pdf?updatedAt=1745271043349">
                                     <i class="fas fa-file-pdf"></i> Future Enhancement Areas
                                 </a>
                             </li>
